# sincos

./: ATLASCxxUtils.h  CMakeLists.txt  README.md  sincos.cxx  sincos.h  sincos_bench.cxx
